--- a/ionicTpl/package.json
+++ b/ionicTpl/package.json
@@ -31,8 +31,10 @@
     "zone.js": "~0.10.2",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
+    "@types/node": "12.12.6",
     "c8osdkangular": "3.0.9",
     "c8ocaf": "2.0.0-beta7",
+    "animate.css": "4.1.0",
 	"ngx-golden-layout": "0.0.12",
     "golden-layout":"1.5.9"
   },
