--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -829,6 +829,30 @@ tplProjectName: C8oStudio
           //    background-color: #FF4136;
           //  }
           //}
+          #flowContainer {
+          	width: 100%;
+          	max-height: 300px !important;
+          	overflow-x: scroll !important;
+          	overflow-y: scroll !important;
+          }
+          #minimap-container {
+            position: relative;
+            display: inline-block;
+            margin: 1rem;
+            border: 1px solid #9e9e9e;
+          }
+          
+          #minimap-navigator {
+            position: absolute;
+            top: 0;
+            left: 0;
+            border: 1px solid #9e9e9e;
+            cursor: move;
+          }
+          
+          #minimap-navigator:hover {
+          	background-color: rgba(255,255,255, 0.3);
+          }
           
           /*! JointJS v3.1.1 (2019-10-28) - JavaScript diagramming library
           
